unpackaged/main/default/objects/FSL_TroubleCode_WorkType__mdt/FSL_TroubleCode_WorkType__mdt.object-meta.xml
<CustomObject>
    <label>FSL TroubleCode WorkType</label>
    <pluralLabel>FSL TroubleCode WorkTypes</pluralLabel>
</CustomObject>