unpackaged/main/default/objects/FSL_TroubleCode_WorkType__mdt/fields/AdditionalCriteria__c.field-meta.xml
<CustomField>
    <fullName>AdditionalCriteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AdditionalCriteria</label>
    <type>Checkbox</type>
</CustomField>