unpackaged/main/default/objects/FSL_TroubleCode_WorkType__mdt/fields/Legacy_Default__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy_Default</label>
    <type>Checkbox</type>
</CustomField>