unpackaged/main/default/objects/FSL_TroubleCode_WorkType__mdt/fields/Legacy_Tcode__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Tcode__c</fullName>
    <label>Legacy_Tcode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>