unpackaged/main/default/objects/FSL_TroubleCode_WorkType__mdt/fields/Pacesetter_Code__c.field-meta.xml
<CustomField>
    <fullName>Pacesetter_Code__c</fullName>
    <label>Pacesetter Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>