unpackaged/main/default/objects/FSL_TroubleCode_WorkType__mdt/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>