unpackaged/main/default/objects/FSL_TroubleCode_WorkType__mdt/fields/TroubleCode__c.field-meta.xml
<CustomField>
    <fullName>TroubleCode__c</fullName>
    <label>TroubleCode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>