unpackaged/main/default/objects/FSL_TroubleCode_WorkType__mdt/fields/WorkType__c.field-meta.xml
<CustomField>
    <fullName>WorkType__c</fullName>
    <label>WorkType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>