unpackaged/main/default/objects/FSL_TroubleCode_WorkType__mdt/listViews/All_Details.listView-meta.xml
<ListView>
    <fullName>All_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>TroubleCode__c</columns>
    <columns>WorkType__c</columns>
    <columns>Service_Type__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>AdditionalCriteria__c</columns>
    <columns>Legacy_Tcode__c</columns>
    <columns>Legacy_Default__c</columns>
    <columns>Pacesetter_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
    <language>en_US</language>
</ListView>