unpackaged/main/default/objects/FSL_TroubleCode_WorkType__mdt/listViews/Enhanced.listView-meta.xml
<ListView>
    <fullName>Enhanced</fullName>
    <columns>DeveloperName</columns>
    <columns>TroubleCode__c</columns>
    <columns>WorkType__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>AdditionalCriteria__c</columns>
    <columns>Service_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Enhanced</label>
    <language>en_US</language>
</ListView>